manifests/deployment.pvc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: whitetail
    service: whitetail
  name: whitetail
spec:
  selector:
    matchLabels:
      app: whitetail
      service: whitetail
  template:
    metadata:
      labels:
        app: whitetail
        service: whitetail
      name: whitetail
    spec:
      containers:
      - image: johncarterodg/whitetail:0.5
        imagePullPolicy: Always
        name: whitetail
        ports:
        - containerPort: 9001
          name: wt-http
          protocol: TCP
        - containerPort: 9002
          name: wt-tcp
          protocol: TCP
        - containerPort: 9003
          name: wt-udp
          protocol: UDP
        resources:
          limits:
            memory: 2Gi
            cpu: "2"
        stdin: true
        tty: true
        volumeMounts:
        - mountPath: /whitetail/config
          name: config-vol
        - mountPath: /whitetail/data
          name: whitetail-persistent-storage
      hostname: whitetail
      restartPolicy: Always
      volumes:
      - configMap:
          name: whitetail-config-configmap
        name: config-vol
      - name: whitetail-persistent-storage
        persistentVolumeClaim:
          claimName: whitetail-pvc
