manifests/postgres.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: whitetail
    service: postgres
  name: postgres
spec:
  selector:
    matchLabels:
      app: whitetail
      service: postgres
  template:
    metadata:
      labels:
        app: whitetail
        service: postgres
      name: postgres
    spec:
      containers:
      - env:
        - name: POSTGRESQL_ADMIN_PASSWORD
          value: foobar
        - name: POSTGRESQL_USER
          value: user
        - name: POSTGRESQL_PASSWORD
          value: pass
        - name: POSTGRESQL_DATABASE
          value: whitetail
        - name: PGDATA
          value: /var/lib/pgsql/data
        image: centos/postgresql-94-centos7:9.4
        imagePullPolicy: Always
        name: postgres
        ports:
        - containerPort: 5432
          name: postgres-http
          protocol: TCP
        stdin: true
        tty: true
        volumeMounts:
        - mountPath: /tmp
          name: temp-dir
      hostname: postgres
      restartPolicy: Always
      securityContext:
        fsGroup: 26
      volumes:
      - emptyDir: {}
        name: temp-dir
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: whitetail
    service: postgres
  name: postgres
spec:
  ports:
  - name: postgres-http
    port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: whitetail
    service: postgres
  sessionAffinity: None
  type: LoadBalancer
