manifests/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    kubernetes.io/ingress.class: alb
  name: whitetail-ingress
  labels:
    app: whitetail
    ingress: whitetail-ingress
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: whitetail
              servicePort: 9001
            path: /*
